--- a/Customer Service.html
+++ b/Customer Service.html
@@ -7,6 +7,7 @@
                 color: rgb(255, 255, 255);
                 margin: 0px;
                 background-color: #0E172F;
+                padding: 20px;
             }
             .dropbtn {
                 padding: 16px;
@@ -70,6 +71,8 @@
                 bottom: 0px;
                 position: fixed;
                 height: 50px;
+                padding-left: 0px;
+                left: 0px;
             }
             .Contact{
                 margin-bottom: 5px;
@@ -77,6 +80,7 @@
             h2{
                 text-align: center;
             }
+            
         </style>
     </head>
     <body>
@@ -96,7 +100,7 @@
         </div>
         <div class="CenterDiv">
             <h1>Customer Services</h1>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQB5r0ND0aiE0hCQH77l8m6Awm33EfodgWD4A&usqp=CAU" alt="Contact us" style="float: left;" height="200px" width="300px">
+            <img src="Image20230306175446.png" alt="Contact us" style="float: left;" height="200px" width="150px">
             <h2>Contact us on one of these numbers for Customer Services</h2>
             <pre>     012747682478</pre>
             <pre>     010864768348</pre>
